[tool.poetry]
name = "zmodn"
version = "0.1.0"
description = ""
authors = ["Alejandro Sanchez Yali <asanchezyali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.26.1", python = ">=3.11,<3.13" }
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
