[tool.poetry]
name = "zmodn"
version = "0.1.0"
description = "Zmodn is a Python library for modular arithmetic on Z/nZ."
authors = ["Alejandro Sanchez Yali <asanchezyali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.26.1", python = ">=3.11,<3.13" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.0.2"
pymdown-extensions = "^10.7"
clang = "^17.0.6"
sphinx-jinja = "^2.0.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
